# momentum-capture

./: AGENT.md  README.md  index.html  package-lock.json  package.json  potential_landing.html  vite.config.ts
_AGENT/: AUDIT.md  AUDIT_REFACTO.md  CURRENT_IMPLEMENTATION.md  CURRENT_TO_IDEAL_PLAN.md  DEVICE_RESOLVER_IMPLEMENTATION.md  IDEAL_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  INSTRUCTIONS.md  PRODUCT_SPECS.md  RECORDING_FLOW.md  ROADMAP.md  _AUDIT_REPORT.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/entitlements/: momentum.entitlements
src-tauri/icons/: icon.icns
src-tauri/resources/: Entitlements.plist  Info.plist  resolve_avf.swift
src-tauri/src/: error.rs  lib.rs  models.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/services/: camera.rs  hotkey.rs  immersive.rs  mod.rs  recording.rs  settings.rs  time.rs
src-tauri/src/services/platform/: device_resolver.rs  macos.rs  mod.rs  screencapturekit_recorder.rs
src-tauri/src/services/platform/macos/: audio_recorder.rs  ffmpeg.rs  mod.rs  muxed_recorder.rs  screen_recorder.rs  synchronized_recorder.rs
src-tauri/src/services/platform/screencapturekit_recorder/: frame_handler.rs  mod.rs  mux.rs  start.rs  state.rs  stop.rs
src/components/camera/: CameraFrame.tsx
src/state/: recordingStore.test.ts  recordingStore.ts  settingsStore.test.ts  settingsStore.ts
src/tauri/: commands.ts  events.ts
src/types/: index.ts
src/windows/: CameraOverlayWindow.tsx  OverlayWindow.tsx  SettingsWindow.tsx
(+4 files in other folders)
