[package]
name = "momentum"
version = "0.1.0"
description = "Momentum Screen Recorder"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "momentum_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
dirs = "5.0"
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.22"
objc = "0.2"
core-foundation = "0.9"
core-media = "0.2"
block = "0.1"
screencapturekit = "1.4"
